<resources>
    <string name="app_name">WeightWatchersApp</string>
    <string name="day_view">Current Day:</string>
    <string name="breakfast_points">Breakfast Points:</string>
    <string name="lunch_points">Lunch Points:</string>
    <string name="dinner_points">Dinner Points:</string>
    <string name="other_points">Other Points:</string>
    <string name="not_set">Not entered</string>
    <string name="submit_day">Next Day</string>
    <string name="remaining_points">Remaining Points:</string>
    <string name="placeholder">placeholder</string>
    <string name="daily">Daily:</string>
    <string name="weekly_points_remaining">Weekly:</string>
    <string name="add_beer">Add Beer</string>
    <string name="add_all">Add All</string>
    <string name="day_placeholder">currentDay</string>
    <string name="daily_points">Daily Points:</string>
    <string name="daily_points_placeholder">dailyPoints</string>
    <string name="breakfast_points_placeholder">breakfastPoints</string>
    <string name="lunch_points_placeholder">lunchPoints</string>
    <string name="dinner_points_placeholder">dinnerPoints</string>
    <string name="other_points_placeholder">otherPoints</string>
    <string name="history_button">History</string>
    <string name="home">Home</string>
    <string name="day_id_placeholder">Day ID</string>
    <string name="weekly_points">Weekly Points:</string>
    <string name="weekly_points_placeholder">weeklyPoints</string>
    <string name="settings_button">App Settings</string>
    <string name="change_daily_points">Change Daily Points:</string>
    <string name="change_weekly_points">Change Weekly Points:</string>
    <string name="edit">Edit</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="quick_add_placeholder">Quick Add</string>
    <string name="change_name">Name:</string>
</resources>