<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dayViewTextView"
        android:layout_width="134dp"
        android:layout_height="30dp"
        android:text="@string/day_view"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/breakfastPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dayViewTextView"
        android:layout_marginBottom="-40dp"
        android:text="@string/breakfast_points"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lunchPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/breakfastPointTextView"
        android:layout_marginBottom="-40dp"
        android:text="@string/lunch_points"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dinnerPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lunchPointTextView"
        android:layout_marginBottom="-40dp"
        android:text="@string/dinner_points"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/otherPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dinnerPointTextView"
        android:layout_marginBottom="-40dp"
        android:text="@string/other_points"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/breakfastPointDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/breakfastPointTextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="-107dp"
        android:text="@string/not_set"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lunchPointDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breakfastPointDisplay"
        android:layout_alignEnd="@+id/lunchPointTextView"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-132dp"
        android:text="@string/not_set"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dinnerPointDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lunchPointDisplay"
        android:layout_alignEnd="@+id/dinnerPointTextView"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="-129dp"
        android:text="@string/not_set"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/otherPointDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinnerPointDisplay"
        android:layout_alignEnd="@+id/otherPointTextView"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-135dp"
        android:text="@string/not_set"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/breakfastPointInput"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/breakfastPointDisplay"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="-132dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/lunchPointInput"
        android:layout_width="97dp"
        android:layout_height="31dp"
        android:layout_below="@+id/breakfastPointInput"
        android:layout_alignEnd="@+id/lunchPointDisplay"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-133dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/dinnerPointInput"
        android:layout_width="97dp"
        android:layout_height="31dp"
        android:layout_below="@+id/lunchPointInput"
        android:layout_alignEnd="@+id/dinnerPointDisplay"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="-134dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/otherPointInput"
        android:layout_width="97dp"
        android:layout_height="31dp"
        android:layout_below="@+id/dinnerPointInput"
        android:layout_alignEnd="@+id/otherPointDisplay"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-135dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />
</RelativeLayout>